sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:14: error: ':' expected but ')' found.
def tri(cpt){
           ^AlgBubbleSort1:24: error: identifier expected but '}' found.
}
^